# mazeGame

./: .gitignore  CMakeLists.txt  README.md
assets/: coin.xcf  coin0.7.xcf  coin1.7.xcf  coin2.7.xcf  coin3.7.xcf  coin4.7.xcf  coin5.7.xcf  coin6.7.xcf  coin7.7.xcf  dirt.bottom.xcf  dirt.bottomLeft.xcf  dirt.bottomRight.xcf  dirt.left.xcf  dirt.right.xcf  dirt.top.xcf  dirt.topLeft.xcf  dirt.topRight.xcf  dirt.xcf  endFlag.xcf  enemy.xcf  grass.xcf  hedge.xcf  icon.xcf  noLeaderboardText.xcf  player.xcf  startFlag.xcf
data/leaderboard/: leaderboard.data
src/: audioManager.cpp  audioManager.h  game.cpp  game.h  gameObject.cpp  gameObject.h  gameplayMap.cpp  gameplayMap.h  leaderboard.cpp  leaderboard.h  main.cpp  map.cpp  map.h  mapList.cpp  mapList.h  mazeGame.rc  textureManager.cpp  textureManager.h  viewMap.h  viewmap.cpp
